--- a/.termux/termux.properties
+++ b/.termux/termux.properties
@@ -3,33 +3,50 @@
 #     ['DELETE', '{}', '()', '[]', 'BACKSLASH', 'LEFT', 'DOWN', 'RIGHT'] \
 # ]
 
-extra-keys = [ \
- ['ESC','SHIFT','KEYBOARD','HOME','UP','END','PGUP','DEL','/',':'], \
- ['TAB','CTRL','ALT','LEFT','DOWN','RIGHT','PGDN','BKSP','!','ENTER'] \
-]
 # extra-keys = [ \
-#  [
-#   {key:'ESC', display:'⎋'},
-#   {key:'SHIFT', display:'⇧'},
-#   {key:'KEYBOARD', display:'⌨'},
-#   {key:'HOME', display:'⌂'},
-#   {key:'UP', display:'↑'},
-#   {key:'END', display:'⇥'},
-#   {key:'PGUP', display:'⇞'},
-#   {key:'DEL', display:'⌦'},
-#  ], \
-#  [
-#   {key:'TAB', display:'⇤'},
-#   {key:'CTRL', display:'⌃'},
-#   {key:'ALT', display:'⎇'},
-#   {key:'LEFT', display:'←'},
-#   {key:'DOWN', display:'↓'},
-#   {key:'RIGHT', display:'→'},
-#   {key:'PGDN', display:'⇟'},
-#   {key:'BKSP', display:'⌫'},
-#   {key:'ENTER', display:'↵'}
-#  ]
+#  ['ESC','SHIFT','KEYBOARD','HOME','UP','END','PGUP','DEL','/',':'], \
+#  ['TAB','CTRL','ALT','LEFT','DOWN','RIGHT','PGDN','BKSP','!','ENTER'] \
 # ]
+
+# extra-keys = [ \
+#  ['ESC','SHIFT','KEYBOARD','HOME','UP','END','PGUP','DEL','/',':'], \
+#  ['TAB','CTRL','ALT','LEFT','DOWN','RIGHT','PGDN','BKSP','!','ENTER'], \
+#  ['|','&','(','ls',')','{','}','[',']','cd'], \
+#  ['<','>','~','-','_','=','+','"',"'",';'] \
+# ]
+
+extra-keys = [ \
+  [ \
+    {key: 'ESC', display: '⎋'}, \
+    {key: 'SHIFT', display: '⇧'}, \
+    {key: 'KEYBOARD', display: '⌨'}, \
+    {key: 'HOME', display: '⌂'}, \
+    {key: 'UP', display: '↑'}, \
+    {key: 'END', display: '⇥'}, \
+    {key: 'PGUP', display: '⇞'}, \
+    {key: '-', display: '-'}, \
+    {key: '&', display: '&'}, \
+    {key: 'DEL', display: '⌦'}, \
+    {key: '/', display: '/'}, \
+    {key: ':', display: ':'} \
+  ], \
+  [ \
+    {key: 'TAB', display: '⇤'}, \
+    {key: 'CTRL', display: '⌃'}, \
+    {key: 'ALT', display: '⎇'}, \
+    {key: 'LEFT', display: '←'}, \
+    {key: 'DOWN', display: '↓'}, \
+    {key: 'RIGHT', display: '→'}, \
+    {key: 'PGDN', display: '⇟'}, \
+    {key: 'F1', display: 'F1'}, \
+    {key: '~', display: '~'}, \
+    {key: 'BKSP', display: '⌫'}, \
+    {key: '!', display: '!'}, \
+    {key: 'ENTER', display: '↵'} \
+  ] \
+]
+
+
 allow-external-apps = true
 
 fullscreen = true
